--- a/config.yaml
+++ b/config.yaml
@@ -3,13 +3,71 @@ model_type: vit_b  # Choices are (vit_b, vit_l, vit_h)
 min_mask_area_default: 2000
 point_generation_candidates: 2000
 
-annotations_file: annotations.csv
-colormap_file: colormap.csv
+annotations_file: seedpoints_on_images.csv
+colormap_path: /media/vicorob/Filesystem2/Taqi/colormap.csv
 images_dir: images/
-checkpoint_file: checkpoint.pth
+checkpoint_path: /media/vicorob/Filesystem2/Taqi/YC-Mask-Generation/sam_vit_b_01ec64.pth
 output_dir: masks/
 
 dirs:
-- dir1/
-- dir2/
-- dir3/
+- /media/vicorob/Filesystem2/Taqi/Processed/250218/plot1_m1/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250218/plot1_m1/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250218/plot1_m1/GPS
+- /media/vicorob/Filesystem2/Taqi/Processed/250218/plot1_m2/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250218/plot1_m2/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250218/plot1_m2/GPS
+- /media/vicorob/Filesystem2/Taqi/Processed/250218/plot1_m3/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250218/plot1_m3/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250218/plot1_m3/GPS
+- /media/vicorob/Filesystem2/Taqi/Processed/250320/plot1_m1/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250320/plot1_m1/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250320/plot1_m1/GPS
+- /media/vicorob/Filesystem2/Taqi/Processed/250320/plot1_m2/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250320/plot1_m2/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250320/plot1_m2/GPS
+- /media/vicorob/Filesystem2/Taqi/Processed/250320/plot1_m3/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250320/plot1_m3/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250320/plot1_m3/GPS
+- /media/vicorob/Filesystem2/Taqi/Processed/250326/plot1_m1/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250326/plot1_m1/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250326/plot1_m1/GPS
+- /media/vicorob/Filesystem2/Taqi/Processed/250326/plot1_m2/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250326/plot1_m2/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250326/plot1_m2/GPS
+- /media/vicorob/Filesystem2/Taqi/Processed/250326/plot1_m3/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250326/plot1_m3/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250326/plot1_m3/GPS
+- /media/vicorob/Filesystem2/Taqi/Processed/250327/plot1_m1/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250327/plot1_m1/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250327/plot1_m1/GPS
+- /media/vicorob/Filesystem2/Taqi/Processed/250327/plot1_m2/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250327/plot1_m2/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250327/plot1_m2/GPS
+- /media/vicorob/Filesystem2/Taqi/Processed/250327/plot1_m3/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250327/plot1_m3/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250327/plot1_m3/GPS
+- /media/vicorob/Filesystem2/Taqi/Processed/250402/plot1_m1/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250402/plot1_m1/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250402/plot1_m1/GPS
+- /media/vicorob/Filesystem2/Taqi/Processed/250402/plot1_m2/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250402/plot1_m2/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250402/plot1_m2/GPS
+- /media/vicorob/Filesystem2/Taqi/Processed/250402/plot1_m3/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250402/plot1_m3/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250402/plot1_m3/GPS
+- /media/vicorob/Filesystem2/Taqi/Processed/250409/plot1_m1/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250409/plot1_m1/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250409/plot1_m1/GPS
+- /media/vicorob/Filesystem2/Taqi/Processed/250409/plot1_m2/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250409/plot1_m2/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250409/plot1_m3/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250409/plot1_m3/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250506/plot1_m1/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250506/plot1_m1/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250506/plot1_m1/GPS
+- /media/vicorob/Filesystem2/Taqi/Processed/250506/plot1_m2/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250506/plot1_m2/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250506/plot1_m2/GPS
+- /media/vicorob/Filesystem2/Taqi/Processed/250506/plot1_m3/18mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250506/plot1_m3/24mm
+- /media/vicorob/Filesystem2/Taqi/Processed/250506/plot1_m3/GPS
